# django_tutorial

./: .gitignore  README.md  pyproject.toml
mysite/: dashboard.py  db.sqlite3
mysite/head_office_app/: admin.py  apps.py  models.py
mysite/head_office_app/migrations/: 0001_initial.py
mysite/mysite/: admin.py  settings.py  urls.py
mysite/polls/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_alter_choice_options_alter_question_options_and_more.py  0003_alter_question_options.py  0004_alter_choice_options.py  0005_reservation.py  0006_reservation_questions.py  0007_alter_reservation_questions.py
mysite/polls/static/polls/: style.css
mysite/polls/templates/: base.html
mysite/polls/templates/polls/: detail.html  edit.html  index.html
mysite/polls/tests/: conftest.py  test_admin.py  test_model.py  test_views.py
mysite/theme/static_src/: package-lock.json  package.json
