[project]
name = "django-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.8",
    "django-debug-toolbar>=6.1.0",
    "django-grappelli>=4.0.2",
    "django-tailwind[cookiecutter,honcho,reload]>=4.4.1",
    "pyright>=1.1.407",
    "ruff>=0.14.3",
]
